finished login/logout

--- a/frontend/travel-app/src/app/navbar/navbar.component.html
+++ b/frontend/travel-app/src/app/navbar/navbar.component.html
@@ -1,7 +1,5 @@
 <nav>
-    <ul>
-      <li><a routerLink="/register">Register</a></li>
-      <!-- Dodaj druge navigacione linkove ovde -->
-    </ul>
-  </nav>
-  
+  <a routerLink="/register">Register</a>
+  <a routerLink="/login">Login</a>
+</nav>
+<router-outlet></router-outlet>
