finished adding tours and keypoints

--- a/frontend/travel-app/src/app/navbar/navbar.component.html
+++ b/frontend/travel-app/src/app/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <nav>
   <a routerLink="/register">Register</a>
   <a routerLink="/login">Login</a>
+  <a routerLink="/add-tour">Add Tour</a>
+  <a routerLink="/tours">View Tours</a>
+  <a routerLink="/add-keypoint">Add Keypoint</a>
 </nav>
 <router-outlet></router-outlet>
