--- a/frontend/travel-app/src/app/app.component.html
+++ b/frontend/travel-app/src/app/app.component.html
@@ -1,3 +1,28 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <a class="navbar-brand" routerLink="/tours">TourApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/add-tour">Add Tour</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/tours">View Tours</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/add-keypoint">Add Keypoint</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  
+  <router-outlet></router-outlet>
+  
