--- a/frontend/travel-app/src/app/app.component.html
+++ b/frontend/travel-app/src/app/app.component.html
@@ -20,6 +20,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/add-keypoint">Add Keypoint</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/map">Map</a>
+        </li>
       </ul>
     </div>
   </nav>
