--- a/frontend/travel-app/src/app/navbar/navbar.component.html
+++ b/frontend/travel-app/src/app/navbar/navbar.component.html
@@ -3,6 +3,9 @@
   <a routerLink="/login">Login</a>
   <a routerLink="/add-tour">Add Tour</a>
   <a routerLink="/tours">View Tours</a>
-  <a routerLink="/map">Show Map</a>
+  <a routerLink="/add-keypoint">Add Keypoint</a>
+  <a routerLink="/cart">Cart</a>
+  <a routerLink="/user-management">User Management</a>
+  <a routerLink="/report-issues">Report Issues</a>
 </nav>
 <router-outlet></router-outlet>
