--- a/frontend/travel-app/src/app/app.component.html
+++ b/frontend/travel-app/src/app/app.component.html
@@ -26,6 +26,12 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/cart">Cart</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/user-management">User Management</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/report-issues">Report Issues</a>
+      </li>
     </ul>
   </div>
 </nav>
