--- a/frontend/travel-app/src/app/navbar/navbar.component.html
+++ b/frontend/travel-app/src/app/navbar/navbar.component.html
@@ -7,5 +7,6 @@
   <a routerLink="/cart">Cart</a>
   <a routerLink="/user-management">User Management</a>
   <a routerLink="/report-issues">Report Issues</a>
+  <a routerLink="/reported-problems">Reported Issues</a>
 </nav>
 <router-outlet></router-outlet>
