--- a/frontend/travel-app/src/app/app.component.html
+++ b/frontend/travel-app/src/app/app.component.html
@@ -32,6 +32,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/report-issues">Report Issues</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/reported-problems">Reported Issues</a>
+      </li>
     </ul>
   </div>
 </nav>
