--- a/frontend/travel-app/src/app/cart/cart.component.html
+++ b/frontend/travel-app/src/app/cart/cart.component.html
@@ -1,17 +1,17 @@
 <h1>Shopping Cart</h1>
 
 <div *ngIf="cart && user">
-  <h3>User: {{ user.firstName }} {{ user.lastName }}</h3>
+  <h3>User: {{ user.username }}</h3>
   <p>Email: {{ user.email }}</p>
   <p>Total Price: {{ cart.totalPrice | currency }}</p>
 
   <ul>
     <li *ngFor="let item of cart.items">
-      <p>Tour ID: {{ item.tourId }}</p>
+      <p>Tour ID: {{ item.tour.id }}</p>
       <p>Tour Title: {{ item.tour.title }}</p>
       <p>Quantity: {{ item.quantity }}</p>
       <p>Price: {{ item.tour.price | currency }}</p>
-      <button (click)="removeFromCart(item.tourId)" class="btn btn-danger">Remove</button>
+      <button (click)="removeFromCart(item.tour.id)" class="btn btn-danger">Remove</button>
     </li>
   </ul>
 
