--- a/frontend/travel-app/src/app/app.component.html
+++ b/frontend/travel-app/src/app/app.component.html
@@ -21,9 +21,6 @@
         <a class="nav-link" routerLink="/add-keypoint">Add Keypoint</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/map">Map</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" routerLink="/cart">Cart</a>
       </li>
       <li class="nav-item">
@@ -34,6 +31,12 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/reported-problems">Reported Issues</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/purchased-tours">Purchased Tours</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/author-problems">Problems of Tours</a>
       </li>
     </ul>
   </div>
