--- a/frontend/travel-app/src/app/navbar/navbar.component.html
+++ b/frontend/travel-app/src/app/navbar/navbar.component.html
@@ -8,5 +8,9 @@
   <a routerLink="/user-management">User Management</a>
   <a routerLink="/report-issues">Report Issues</a>
   <a routerLink="/reported-problems">Reported Issues</a>
+  <a routerLink="/purchased-tours">Purchased Tours</a>
+  <a routerLink="/author-problems">Problems for Tours</a>
+  
+
 </nav>
 <router-outlet></router-outlet>
